[package]
name = "make_npdata"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Rust port of make_npdata EDAT/SDAT crypto/decrypt helpers"

[dependencies]
aes = "0.8"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
cmac = "0.7"
digest = "0.10"
hmac = "0.12"
sha1 = "0.10"
